fix dissapearing before when z-index with minus

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
 
 #root, .App {
   margin: 0;
-  background-color: #fff;
+  /* background-color: #fff; */
   min-width: 1020px;
 }
 
